fix spacings

--- a/ai-proficient/css/ai-proficient.css
+++ b/ai-proficient/css/ai-proficient.css
@@ -70,7 +70,6 @@
 .aip\[search-box\] {
   display: none;;
   position: relative;
-  margin: 0 0 1rem 1.75rem;
 }
 .aip\[search-box\] i {
   position: absolute;
